--- a/app/views/users/students.html.erb
+++ b/app/views/users/students.html.erb
@@ -1,9 +1,6 @@
-<section class="container">
-  <header>
-    <h1>Users#students</h1>
-  </header>
-
-  <div>
-    <p>Find me in app/views/users/students.html.erb</p>
+<div class="page-content">
+  <div class="body-community">
+    <%= render "card_students" %>
   </div>
-</section>
+</div>
+
