--- a/app/assets/stylesheets/components/_card_teacher_home_2.scss
+++ b/app/assets/stylesheets/components/_card_teacher_home_2.scss
@@ -1,113 +1,123 @@
-.card-community-home-2{
-  display: flex;
-  width: auto;
-  height: 406px;
-  padding: 12px;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-shrink: 0;
-  border-radius: 16px;
-  background: #FFF;
-  gap: 4px;
-  box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.5);
+/* Estilos para la tarjeta de la comunidad en la página principal */
+.card-community-home-2 {
+  display: flex; /* Muestra los elementos en una fila */
+  width: auto; /* Ancho automático según el contenido */
+  height: 406px; /* Altura fija de la tarjeta */
+  padding: 12px; /* Relleno interior de la tarjeta */
+  flex-direction: column; /* Organiza los elementos en una columna */
+  justify-content: space-between; /* Distribuye el espacio entre los elementos */
+  align-items: flex-start; /* Alinea los elementos al inicio del eje transversal (eje Y) */
+  flex-shrink: 0; /* No permite que la tarjeta se encoja más allá de su tamaño inicial */
+  border-radius: 16px; /* Bordes redondeados para la tarjeta */
+  background: #FFF; /* Fondo blanco */
+  gap: 4px; /* Espacio entre los elementos */
+  box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.5); /* Sombra para la tarjeta */
 
+  /* Estilos para el título y la descripción de la tarjeta */
   .title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-self: stretch;
+    display: flex; /* Muestra los elementos en una fila */
+    justify-content: space-between; /* Distribuye el espacio entre los elementos */
+    align-items: center; /* Alinea los elementos al centro del eje transversal (eje Y) */
+    align-self: stretch; /* Ajusta la alineación al estirar la tarjeta */
+
+    /* Estilos para el título h2 */
     h2 {
-      flex: 1 0 0;
-      color: var(--Primario, #000);
-      font-family: Roboto;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 18px;
-      margin: auto;
+      flex: 1 0 0; /* Ocupa el espacio disponible y no se encoge más allá de su contenido */
+      color: var(--Primario, #000); /* Color del texto principal */
+      font-family: Roboto; /* Tipo de fuente */
+      font-size: 20px; /* Tamaño de fuente para el título */
+      font-weight: 700; /* Peso de la fuente */
+      line-height: 18px; /* Altura de línea */
+      margin: auto; /* Margen automático */
     }
+
+    /* Estilos para el párrafo de descripción */
     p {
-      color: #1C1C1E;
-      font-family: Roboto;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      margin: auto
+      color: #1C1C1E; /* Color del texto secundario */
+      font-family: Roboto; /* Tipo de fuente */
+      font-size: 14px; /* Tamaño de fuente para el párrafo */
+      font-weight: 400; /* Peso de la fuente */
+      line-height: normal; /* Altura de línea normal */
+      margin: auto; /* Margen automático */
     }
   }
 
+  /* Estilos para la imagen de la tarjeta */
   .img {
-    width: 100%;
+    width: 100%; /* Ancho completo de la imagen */
+    
+    /* Estilos para la imagen dentro de la tarjeta */
     img {
-      width: 100%;
-      border-radius: 16px;
-      object-fit: cover;
-      height: 360px;
-      align-self: stretch;
-      transition: transform 0.3s ease;
+      width: 100%; /* Ancho completo de la imagen */
+      border-radius: 16px; /* Bordes redondeados para la imagen */
+      object-fit: cover; /* Ajusta la imagen para cubrir completamente el contenedor */
+      height: 360px; /* Altura fija de la imagen */
+      align-self: stretch; /* Ajusta la alineación al estirar la tarjeta */
+      transition: transform 0.3s ease; /* Transición suave de la transformación */
     }
   }
 
+  /* Estilos para la información adicional en la tarjeta */
   .infos {
-    opacity: 0;
-    z-index: 1;
-    transform: translateY(-101%);
-    display: flex;
-    height: 360px;
-    padding: 12px;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-shrink: 0;
-    align-self: stretch;
-    border-radius: 16px;
-    background: rgba(0, 0, 0, 0.50);
+    opacity: 0; /* Opacidad inicial */
+    z-index: 1; /* Coloca el elemento encima de otros elementos */
+    transform: translateY(-101%); /* Mueve el elemento fuera de la vista inicialmente */
+    display: flex; /* Muestra los elementos en una columna */
+    height: 360px; /* Altura fija de la información adicional */
+    padding: 12px; /* Relleno interior de la información adicional */
+    flex-direction: column; /* Organiza los elementos en una columna */
+    justify-content: space-between; /* Distribuye el espacio entre los elementos */
+    align-items: flex-start; /* Alinea los elementos al inicio del eje transversal (eje Y) */
+    flex-shrink: 0; /* No permite que la información adicional se encoja más allá de su tamaño inicial */
+    align-self: stretch; /* Ajusta la alineación al estirar la tarjeta */
+    border-radius: 16px; /* Bordes redondeados para la información adicional */
+    background: rgba(0, 0, 0, 0.50); /* Fondo semitransparente negro */
 
+    /* Estilos para el párrafo dentro de la información adicional */
     p {
-      color: #FFF;
-      text-align: center;
-      font-family: Roboto;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      margin: 0px;
+      color: #FFF; /* Color del texto en la información adicional */
+      text-align: center; /* Alinea el texto al centro */
+      font-family: Roboto; /* Tipo de fuente */
+      font-size: 14px; /* Tamaño de fuente para el párrafo */
+      font-weight: 400; /* Peso de la fuente */
+      line-height: normal; /* Altura de línea normal */
+      margin: 0px; /* Sin margen */
     }
 
+    /* Estilos para el span dentro de la información adicional */
     span {
-      color: #FFF;
-      font-family: Roboto;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
+      color: #FFF; /* Color del texto en la información adicional */
+      font-family: Roboto; /* Tipo de fuente */
+      font-size: 14px; /* Tamaño de fuente para el span */
+      font-weight: 400; /* Peso de la fuente */
+      line-height: normal; /* Altura de línea normal */
 
-      color: #FFF;
-      text-align: center;
-      font-family: Roboto;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: normal;
+      /* Duplicación de propiedades (error) */
+      color: #FFF; /* Color del texto en la información adicional */
+      text-align: center; /* Alinea el texto al centro */
+      font-family: Roboto; /* Tipo de fuente */
+      font-size: 18px; /* Tamaño de fuente para el span */
+      font-weight: 700; /* Peso de la fuente */
+      line-height: normal; /* Altura de línea normal */
     }
+
+    /* Estilos para el contenedor de lenguajes en la información adicional */
     .language {
-      max-width: auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      align-self: stretch;
-      flex-wrap: nowrap;
+      max-width: auto; /* Ancho máximo automático */
+      display: flex; /* Muestra los elementos en una fila */
+      justify-content: space-between; /* Distribuye el espacio entre los elementos */
+      align-items: center; /* Alinea los elementos al centro del eje transversal (eje Y) */
+      align-self: stretch; /* Ajusta la alineación al estirar la tarjeta */
+      flex-wrap: nowrap; /* No permite que los elementos se envuelvan a la siguiente línea */
     }
-    transition: transform 0.5s ease, opacity 0.5s ease; /* Ajusta la duración y la función de temporización */
+
+    /* Transición suave para la transformación y opacidad */
+    transition: transform 0.5s ease, opacity 0.5s ease;
   }
-  
+
+  /* Estilos para la información adicional al pasar el ratón por encima */
   .infos:hover {
-    opacity: 1;
+    opacity: 1; /* Opacidad completa al pasar el ratón por encima */
     transform: translateY(-101%); /* Restaura la posición original al pasar el mouse */
   }
-  
 }
-
-
