--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,3 +10,7 @@
 @import "banner_mid";
 @import "card_teacher_home_2";
 @import "card_students";
+@import "perfil/banner_perfil";
+@import "perfil/avatar_perfil";
+@import "perfil/info_users";
+@import "perfil/card_perfil";
