--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,13 @@
-<section class="container">
-  <header>
-    <h1>Perfil del usario cliqueado</h1>
-    <%= @user.id %>
-  </header>
-  <%#= raise %>
 
-  <div>
-    <p>Find me in app/views/users/show.html.erb</p>
+<div class="page-content">
+  <div class="container" style="max-width: 1440px;">
+
+    <%= render "banner_perfil" %>
+    <%= render "card_perfil" %>
+
+
+
+
+
   </div>
-</section>
-
-
-
-<%= @user.first_name %>
-<%= @user.last_name %>
+</div>
