--- a/app/views/pages/_card_teacher_home.html.erb
+++ b/app/views/pages/_card_teacher_home.html.erb
@@ -12,8 +12,8 @@
             <%= link_to user_path(teacher), style: "text-decoration: none; color: inherit;" do %>
               <div class="card-teacher-home">
                 <h2 class="ranking">#<%= ranking_counter %></h2>
-                <% if teacher.photo.present? %>
-                  <%= image_tag teacher.photo, class: "card-img-top", alt: "foto de perfil del profesor" %>
+                <% if teacher.profile_photo.present? %>
+                  <%= image_tag teacher.profile_photo, class: "card-img-top", alt: "foto de perfil del profesor" %>
                 <% else %>
                   <%= image_tag 'gatito.jpg', class: "card-img-top", alt: "Foto por defecto" %>
                 <% end %>
