--- a/app/views/pages/_card_teacher_home_2.html.erb
+++ b/app/views/pages/_card_teacher_home_2.html.erb
@@ -12,8 +12,8 @@
               </p>
             </div>
             <div class="img">
-              <% if teacher.photo.present? %>
-                <%= image_tag teacher.photo, class: "card-img-top", alt: "foto de perfil del profesor" %>
+              <% if teacher.profile_photo.present? %>
+                <%= image_tag teacher.profile_photo, class: "card-img-top", alt: "foto de perfil del profesor" %>
               <% else %>
                 <%= image_tag 'gatito.jpg', class: "card-img-top", alt: "Foto por defecto" %>
               <% end %>
