--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,33 +1,53 @@
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Clases Programadads <%=%></a>
+<ul class="nav nav-tabs mt-5 mx-auto" style="width: 550px; border-bottom: none;" id="myTab" role="tablist">
+  <li class="nav-item button"  role="presentation">
+    <button class="nav-link active" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="classes" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Clases programdas</button>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+  <li class="nav-item  mx-5 button" role="presentation">
+    <button class="nav-link" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Historial</button>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">Disabled</a>
+  <li class="nav-item button" role="presentation">
+    <button class="nav-link" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Favoritos</button>
   </li>
 </ul>
 
 
-<div class="container mt-5">
-  <h1 class="mb-3">Reservas</h1>
-  <ul class="list-group">
-    <% @bookings.each do |booking| %>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        <%= booking.teaching_language_session.user.first_name %>
-        <%= booking.teaching_language_session.user.last_name %>
-        <%= booking.teaching_language_session.language %>
-        <%= booking.time_in %>
-        <%= booking.date %>
-
-        <%= link_to "Ver más", booking_path(booking), class: "btn btn-info btn-sm" %>
-      </li>
-    <% end %>
-  </ul>
-    <%= link_to "Crear reserva", new_booking_path, class: "btn btn-primary mt-3" %>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active classes" id="home-tab-pane" role="tabpanel" aria-labelledby="classes" tabindex="0">
+    <div class="container mt-2">
+      <ul class="" style="background-color: white;">
+        <% @bookings.each do |booking| %>
+          <div class="bookings pt-5 pb-2 container text-center">
+            <div class="row">
+              <li class="list-group-item d-flex justify-content-between align-items-center ">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <%= booking.teaching_language_session.user.first_name %>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <%= booking.teaching_language_session.user.last_name %>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <%= booking.teaching_language_session.language %>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <%= booking.time_in %>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <%= booking.date %>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                  <%= link_to "Ver más", booking_path(booking), class: "btn btn-info btn-sm" %>
+                </div></li>
+            </div>
+          </div>
+        <% end %>
+      </ul>
+      <%= link_to "Crear reserva", new_booking_path, class: "btn btn-primary mt-3" %>
+    </div>
+  </div>
+  <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+    Historial
+  </div>
+  <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+    Favoritas
+  </div>
 </div>
