--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
             <%= link_to "Mis clases", teaching_language_sessions_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Blogs", "#", class: "nav-link" %>
+            <%= link_to "Blogs", blogs_path, class: "nav-link" %>
           </li>
 
           <!-- MENÚ DESPLEGABLE -->
