view de blogs listo

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -14,3 +14,5 @@
 @import "perfil/avatar_perfil";
 @import "perfil/info_users";
 @import "perfil/card_perfil";
+@import "blog/card_blogs";
+@import "blog/show_blog";
