--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,6 @@
 <%= render "banner_blog"%>
-
-<% @blogs.each do |blog| %>
-  <%= blog %>
-<% end %>
+<div class="page-content">
+  <div class="body-community">
+    <%= render "card_blogs" %>
+  </div>
+</div>
