--- a/app/views/blogs/_banner_blog.html.erb
+++ b/app/views/blogs/_banner_blog.html.erb
@@ -1,14 +1,19 @@
-<%# <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+<div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
+    <% @blogs.each_with_index do |blog, index| %>
+      <div class="carousel-item <%= 'active' if index == 0 %>">
+        <% if blog.banner_image.attached? %>
+          <div class="d-block w-100" style="position: relative; max-height: 600px;">
+            <%= image_tag blog.banner_image.attachment, class: "d-block w-100", alt: "banner", style: "object-fit: cover; object-position: center; max-height: 100%;" %>
+            <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; font-size: 50px; font-weight: bold; background: rgba(0, 0, 0, 0.20); border-radius: 16px;">
+              <%= blog.title %>
+            </div>
+          </div>
+        <% else %>
+          <%= image_tag 'default_banner.jpg', class: "d-block w-100", alt: "Default Banner", style: "max-height: 720px; object-fit: cover; object-position: center;" %>
+        <% end %>
+      </div>
+    <% end %>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -18,14 +23,4 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div> %>
-
-
-
-<%# photo_album_urls = @blog.photo_album.map(&:url) %>
-  <%# photo_album_urls.each do |url|%>
-    <%#= url %>
-  <%#end %>
-
-
-
+</div>
