--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -14,31 +14,32 @@
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active classes" id="home-tab-pane" role="tabpanel" aria-labelledby="classes" tabindex="0">
     <div class="container mt-2">
-      <ul class="" style="background-color: white;">
+      <ul class="list-group-item" style="background-color: white;">
         <% @bookings.each do |booking| %>
-          <div class="bookings pt-5 pb-2 container text-center">
-            <div class="row">
-              <li class="list-group-item d-flex justify-content-between align-items-center ">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div class="bookings pt-5 pb-2 container text-center">
+              <div class="row">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                   <%= booking.teaching_language_session.user.first_name %>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                   <%= booking.teaching_language_session.user.last_name %>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                   <%= booking.teaching_language_session.language %>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                   <%= booking.time_in %>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                   <%= booking.date %>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                   <%= link_to "Ver más", booking_path(booking), class: "btn btn-info btn-sm" %>
-                </div></li>
+                </div>
+              </div>
             </div>
-          </div>
+          </li>
         <% end %>
       </ul>
       <%= link_to "Crear reserva", new_booking_path, class: "btn btn-primary mt-3" %>
