detalles del perfil

--- a/app/views/users/_banner_perfil.html.erb
+++ b/app/views/users/_banner_perfil.html.erb
@@ -14,12 +14,15 @@
     <% end %>
   </div>
 
-  <div class="info-users">
-    <h2><%= @user.first_name %> <%= @user.last_name %></h2>
+<div class="info-users">
+  <h2><%= @user.first_name %> <%= @user.last_name %></h2>
+  
+  <% if @user.date_of_birth.present? %>
     <% age = (Time.zone.now - @user.date_of_birth.to_time) / 1.year.seconds %>
-    <p><%= " #{age.to_i}" %></p>
-    
-  </div>
+    <p><%= age.to_i %></p>
+  <% end %>
+</div>
+
 
 
 
