--- a/app/assets/stylesheets/components/perfil/_card_perfil.scss
+++ b/app/assets/stylesheets/components/perfil/_card_perfil.scss
@@ -1,4 +1,5 @@
-.card-images{
+.card-container{
+  margin-bottom: 48px;
   display: flex;
   padding: 20px;
   flex-direction: column;
@@ -7,23 +8,18 @@
   border-radius: 16px;
   background: #FFF;
   box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.5); /* Sombra para la tarjeta */
-
-
   .titles-info{
     display: flex;
     align-items: flex-end;
     align-self: stretch;
     border-bottom: 1px solid rgba(152, 152, 152, 0.50);
-
     h4{
       flex: 1 0 0;
-      color: var(--Primario, #000);
+      color: var(--negro-50, rgba(0, 0, 0, 0.50));
       font-family: Roboto;
       font-size: 20px;
       font-weight: 600;
-
     }
-
     p{
       width: 45px;
       height: 16px;
@@ -40,13 +36,33 @@
   .fotos-container {
     width: 100%;
     padding-top: 16px;
-
     img {
       width: 100%;
       flex: 1;
       border-radius: 16px;
       object-fit: cover;
       height: 128px;
+    }
+  }
+
+  .infos{
+    padding: 8px;
+    margin: 0px;
+    h4{
+      color: var(--negro-50, rgba(0, 0, 0, 0.50));
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    }
+    p{
+      color: var(--negro-50, rgba(0, 0, 0, 0.50));
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
     }
   }
   
