--- a/app/views/users/_card_students.html.erb
+++ b/app/views/users/_card_students.html.erb
@@ -1,6 +1,8 @@
 <div class="container" style="max-width: 1440px;">
   <div class="row">
     <% @students.each do |student| %>
+      <% next if student == current_user %>
+
       <div class="col-md-3" >
         <%= link_to user_path(student), style: "text-decoration: none; color: inherit;" do %>
           <div class="card-community">
