--- a/app/views/users/teachers.html.erb
+++ b/app/views/users/teachers.html.erb
@@ -24,7 +24,7 @@
         <div class="card mb-3 card-ancha" style="max-width: 540px;">
           <div class="row g-0 ancho-uno">
             <div class="col-md-4">
-              <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1703036179/f76d7df8054762f3ad5033a847a343e8_hyoyww.jpg", alt: "..." %>
+              <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1703036179/f76d7df8054762f3ad5033a847a343e8_hyoyww.jpg", class:"imag-grande", alt: "..." %>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -45,10 +45,10 @@
       <div class="custom-col-6 custom-col-lg-4">
         <p>Contenido para col-6 y col-lg-4</p>
         <div class="card card-chica" style="width: 18rem;">
-          <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1703036179/f76d7df8054762f3ad5033a847a343e8_hyoyww.jpg", class: "card-img-top", alt: "..." %>
-          <div class="card-body">
-            <%= link_to "Go somewhere", "#", class: "btn btn-primary" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-primary" %>
+          <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1703036179/f76d7df8054762f3ad5033a847a343e8_hyoyww.jpg", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
+          <div class="card-body botones-pequeños">
+            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
