--- a/app/views/users/students.html.erb
+++ b/app/views/users/students.html.erb
@@ -1,6 +1,19 @@
 <div class="page-content">
   <div class="body-community">
+
+  <div class="row justify-content-center">
+    <div class="col-sm-8 my-3">
+      <%= form_with url: students_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Type a keyword"
+          %>
+        <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+
     <%= render "card_students" %>
   </div>
 </div>
-
