Avance booking 6 de enero

--- a/app/assets/stylesheets/components/_bookings.scss
+++ b/app/assets/stylesheets/components/_bookings.scss
@@ -1,3 +1,4 @@
+
 .button{
   background-color: rgba(34, 81, 145, 1);
   color: white;
@@ -22,4 +23,18 @@
 
 .bookings {
   border-bottom: 0.5px solid #BDC7D9;
+}
+
+.classic-btn {
+  color: #205A8C;
+  width: auto;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 800; // Cambiado a un valor numérico
+  border-width: 5px;
+  border-radius: 50px;
+  background-color: white;
+  box-shadow: 0 0 5px #BDC7D9;
+  text-decoration: none;
+  white-space: nowrap;
 }
