--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
             <%= link_to "Chat", "#", class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Mis clases", teaching_language_sessions_path, class: "nav-link" %>
+            <%= link_to "Mis clases", bookings_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Blogs", blogs_path, class: "nav-link" %>
