--- a/app/views/users/students.html.erb
+++ b/app/views/users/students.html.erb
@@ -1,19 +1,23 @@
 <div class="page-content">
   <div class="body-community">
-
-  <div class="row justify-content-center">
-    <div class="col-sm-8 my-3">
-      <%= form_with url: students_path, method: :get, class: "d-flex" do %>
-        <%= text_field_tag :query,
-              params[:query],
-              class: "form-control",
-              placeholder: "Type a keyword"
+    <%# SEARCH BAR %>
+    <div class="row justify-content-center" data-controller="search-students">
+      <div class="col-sm-8 my-3">
+        <%= form_with url: students_path, method: :get, html: {class: "d-flex", data: {search_students_target: "form"}} do |f| %>
+          <%= f.text_field :query,
+                           class: "form-control",
+                           placeholder: "Encuentra a personas...",
+                           value: params[:query],
+                           data: {search_students_target: "input"}
           %>
-        <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
-      <% end %>
+        <%#= submit_tag "Search", name: "", class: "btn btn-primary" %>
+        <% end %>
+      </div>
     </div>
-  </div>
 
-    <%= render "card_students" %>
+    <%# STUDENTS CARDS %>
+    <div data-search-students-target="student-card">
+      <%= render "card_students" %>
+    </div>
   </div>
 </div>
